# ML_optimization

./: README.md  pyproject.toml
lab1-gradient-descent/: 01-lab-gradient-descent.ipynb  utils.py
lab2-projected-gradient-descent/: PGD.ipynb  utils.py
lab3-projet-packaging/: pyproject.toml  setup.py
lab3-projet-packaging/LinearRegression/: config.py  utils.py
lab3-projet-packaging/notebook/: test-notebook.ipynb  test2-notebook.ipynb
lab4-SGD/: Lab 5 - Stochastic Gradient Descent.ipynb  Stochastic Gradient Descent.ipynb
lab5-newton-method/: Lab 5 - Fixed Point with Newton.ipynb
lab6-svm-SGD/: svm.ipynb
