[tool.poetry]
name = "cours-ml-optim"
version = "0.1"
description = "Manage dependencies of machine learning optimisation course."
authors = ["MBIA NDI Marie Thérèse"]
readme = "README.md"
repository = "https://github.com/MBIANDI/ML_optimization"  

# Disable package mode
package-mode = false

[tool.poetry.dependencies]
python = "^3.11"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
